取消跟踪无关文件